11/12/10 use a non-linear relationship for showing total charge on dielectric, so that changes are clearly visible with battery voltages
# 0.00.40 (46011) Nov 11, 2010
11/11/10 dev version to demonstrate shape-based voltmeter probes
11/11/10 move responsibility for debug shape rendering into ShapesDebugNode and out of general nodes, all shape generation can now be in world coordinate frame
11/11/10 move all Shape creation stuff out of the model and into factories, usable by both model and view
11/11/10 add constant for MODEL_BOUNDS_STROKE
11/11/10 don't try to constrain locations unless !World.isBoundsEmpty
11/11/10 use intersects(Shape) instead of contains(Point2D) for voltmeter probes
11/11/10 test for shape intersection between wires and voltmeter probes
11/11/10 make voltmeter read 0V when probes are touching
11/11/10 add shapes for voltmeter probe tips
11/11/10 add infrastructure for touching voltmeter probe tips together to display 0V
11/11/10 specializations of Wire for connecting a battery to a capacitor
11/11/10 specializations of WireSegment for connection to battery and capacitor, length changes dynamically
11/11/10 add y-offset getters for battery terminals, for computing wire connection points
11/11/10 move all battery shape constants inside Battery model element
11/11/10 adjusted battery body bounds to match new battery images
11/11/10 modified the battery image so that only the top terminal is visible, and the positive terminal doesn't extend above body
11/11/10 move creation of battery body shape into Battery model element
11/11/10 move rendering of battery terminal shapes into BatteryNode
11/11/10 restore spacing between dielectric charges
# 0.00.39 (45953) Nov 11, 2010
11/11/10 dev version for discussion about dielectric charge spacing
11/11/10 temporarily double max spacing between dielectric charges to demo that this does not fix scale problem
11/10/10 put voltmeter in front of E-Field detector, since voltmeter is smaller